Removed the testing database key from the code

--- a/Notebooks/Comments per user.ipynb
+++ b/Notebooks/Comments per user.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
     "from bson import ObjectId  # Import ObjectId to handle ObjectIds\n",
     "\n",
     "# Connect to the MongoDB database\n",
-    "client = MongoClient(\"mongodb+srv://matejasmiljanic:AfgQNglyyyJYMTJh@cluster0.xiwcv4m.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\")\n",
+    "client = MongoClient()\n",
     "db = client['ttt4']  # Replace with your database name\n",
     "\n",
     "try:\n",
