--- a/Notebooks/Sentiments of comments per user.ipynb
+++ b/Notebooks/Sentiments of comments per user.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
     "pio.renderers.default = 'browser'\n",
     "\n",
     "# MongoDB connection\n",
-    "client = MongoClient(\"mongodb+srv://matejasmiljanic:AfgQNglyyyJYMTJh@cluster0.xiwcv4m.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\")\n",
+    "client = MongoClient(\"\")\n",
     "db = client['ttt4']  # Replace with your database name\n",
     "\n",
     "# Load comments collection\n",
