--- a/Notebooks/database.ipynb
+++ b/Notebooks/database.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
     "from pymongo import MongoClient\n",
     "\n",
     "# Replace with your MongoDB connection string\n",
-    "database_url = \"mongodb+srv://matejasmiljanic:AfgQNglyyyJYMTJh@cluster0.xiwcv4m.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\"\n",
+    "database_url = \"\"\n",
     "\n",
     "# Connect to the MongoDB server\n",
     "client = MongoClient(database_url)\n",
