Initial commit from remote server

--- a/Notebooks/Sentiments of comments per user.ipynb
+++ b/Notebooks/Sentiments of comments per user.ipynb
@@ -38,8 +38,8 @@
     "pio.renderers.default = 'browser'\n",
     "\n",
     "# MongoDB connection\n",
-    "client = MongoClient(\"\")\n",
-    "db = client['ttt4']  # Replace with your database name\n",
+    "client = MongoClient(myclient.os.getenv('db_url_for_creating'))\n",
+    "db = client[myclient.os.getenv('db_name')]  # Replace with your database name\n",
     "\n",
     "# Load comments collection\n",
     "comments = pd.DataFrame(list(db.comments.find()))\n",
