--- a/Notebooks/database.ipynb
+++ b/Notebooks/database.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
     "from pymongo import MongoClient\n",
     "\n",
     "# Replace with your MongoDB connection string\n",
-    "database_url = \"mongodb+srv://matejasmiljanic:AfgQNglyyyJYMTJh@cluster0.xiwcv4m.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\"\n",
+    "database_url = myclient.os.getenv('db_url_for_creating')\n",
     "\n",
     "# Connect to the MongoDB server\n",
     "client = MongoClient(database_url)\n",
@@ -145,13 +145,13 @@
     "from datetime import datetime, timedelta\n",
     "\n",
     "# Replace with your MongoDB connection string\n",
-    "database_url = \"mongodb+srv://matejasmiljanic:AfgQNglyyyJYMTJh@cluster0.xiwcv4m.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\"\n",
+    "database_url = myclient.os.getenv('db_url_for_creating')\n",
     "\n",
     "# Connect to the MongoDB server\n",
     "client = MongoClient(database_url)\n",
     "\n",
     "# Access the specific database\n",
-    "db_name = \"ms3\"\n",
+    "db_name = myclient.os.getenv('db_name')\n",
     "db = client[db_name]\n",
     "\n",
     "three_weeks_ago = datetime.now() - timedelta(days=10) #datetime.now() - timedelta(weeks=3)\n",
