--- a/Notebooks/posts per user.ipynb
+++ b/Notebooks/posts per user.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -33,8 +33,8 @@
     "from bson import ObjectId  # Import ObjectId to handle ObjectIds\n",
     "\n",
     "# Connect to the MongoDB database\n",
-    "client = MongoClient(\"mongodb+srv://matejasmiljanic:AfgQNglyyyJYMTJh@cluster0.xiwcv4m.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\")\n",
-    "db = client['ms1'] \n",
+    "client = MongoClient(myclient.os.getenv('db_url_for_creating'))\n",
+    "db = client[myclient.os.getenv('db_name')] \n",
     "\n",
     "# Load collections into DataFrames\n",
     "posts = pd.DataFrame(list(db.posts.find()))\n",
@@ -262,7 +262,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -276,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
