Initial commit from remote server

--- a/Notebooks/database.ipynb
+++ b/Notebooks/database.ipynb
@@ -112,30 +112,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-10-18 00:00:00\n",
-      "2024-11-10 00:00:00\n",
-      "Deleted 0 documents from viewposts\n",
-      "Deleted 0 documents from comments\n",
-      "Deleted 0 documents from postdislikes\n",
-      "Deleted 0 documents from users\n",
-      "Deleted 0 documents from sampleCollection\n",
-      "Deleted 0 documents from commentdislikes\n",
-      "Deleted 0 documents from idstorages\n",
-      "Deleted 0 documents from posts\n",
-      "Deleted 0 documents from commentlikes\n",
-      "Deleted 0 documents from readposts\n",
-      "Deleted 0 documents from selectedusers\n",
-      "Deleted 0 documents from postlikes\n",
-      "Deleted 0 documents from subscriptions\n",
-      "Deleted 0 documents from reposts\n",
-      "Deleted 0 documents from users5\n",
+      "2024-10-20 00:00:00\n",
+      "2024-11-12 00:00:00\n",
       "Data deletion complete.\n"
      ]
     }
@@ -143,15 +128,15 @@
    "source": [
     "from pymongo import MongoClient\n",
     "from datetime import datetime, timedelta\n",
-    "\n",
+    "import os\n",
     "# Replace with your MongoDB connection string\n",
-    "database_url = myclient.os.getenv('db_url_for_creating')\n",
+    "database_url = os.getenv('db_url_for_creating')\n",
     "\n",
     "# Connect to the MongoDB server\n",
     "client = MongoClient(database_url)\n",
     "\n",
     "# Access the specific database\n",
-    "db_name = myclient.os.getenv('db_name')\n",
+    "db_name = os.getenv('db_name')\n",
     "db = client[db_name]\n",
     "\n",
     "three_weeks_ago = datetime.now() - timedelta(days=10) #datetime.now() - timedelta(weeks=3)\n",
@@ -178,6 +163,73 @@
     "    print(f\"Deleted {result.deleted_count} documents from {collection_name}\")\n",
     "\n",
     "print(\"Data deletion complete.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleted 180 documents.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pymongo import MongoClient\n",
+    "from datetime import datetime, timedelta\n",
+    "import os\n",
+    "\n",
+    "# Replace with your MongoDB connection string\n",
+    "database_url = os.getenv('db_url_for_creating')\n",
+    "\n",
+    "# Connect to the MongoDB server\n",
+    "client = MongoClient(database_url)\n",
+    "\n",
+    "db = client[\"ms1\"]\n",
+    "users_collection = db[\"users\"]     # Replace with your collection name\n",
+    "\n",
+    "# Define the cutoff date\n",
+    "cutoff_date = datetime(2024, 11, 6, 23, 59, 59)\n",
+    "\n",
+    "# Delete users created after the cutoff date\n",
+    "result = users_collection.delete_many({\"createdAt\": {\"$gt\": cutoff_date}})\n",
+    "print(f\"Deleted {result.deleted_count} documents.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copied 15 users to ms4.\n",
+      "Copied 20 posts to ms4.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "source_db = client[\"ms1\"]  # Source database\n",
+    "target_db = client[\"ms3\"]  # Target database\n",
+    "\n",
+    "# Copy all documents from the \"users\" collection\n",
+    "users = list(source_db[\"users\"].find())\n",
+    "if users:\n",
+    "    target_db[\"users\"].insert_many(users)\n",
+    "    print(f\"Copied {len(users)} users to ms4.\")\n",
+    "\n",
+    "# Copy only the first 20 documents from the \"posts\" collection\n",
+    "posts = list(source_db[\"posts\"].find().limit(20))\n",
+    "if posts:\n",
+    "    target_db[\"posts\"].insert_many(posts)\n",
+    "    print(f\"Copied {len(posts)} posts to ms4.\")"
    ]
   },
   {
