Initial commit from remote server

--- a/Notebooks/Notebooks/database.ipynb
+++ b/Notebooks/Notebooks/database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -35,13 +35,13 @@
     "from pymongo import MongoClient\n",
     "\n",
     "# Replace with your MongoDB connection string\n",
-    "database_url = myclient.os.getenv('db_url_for_creating')\n",
+    "database_url = os.getenv('db_url_for_creating')\n",
     "\n",
     "# Connect to the MongoDB server\n",
     "client = MongoClient(database_url)\n",
     "\n",
     "# Access the specific database\n",
-    "db_name = \"ms4\" #change to the name of db you want to create\n",
+    "db_name = \"real_news\" #change to the name of db you want to create\n",
     "db = client[db_name]\n",
     "\n",
     "collection_name = \"sampleCollection\"\n",
@@ -65,14 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Database 'ms4' created and collections copied. Collections 'idstorages, selectedusers' retained with data.\n"
+      "Database 'real_news' created and collections copied. Collections 'idstorages, selectedusers' retained with data.\n"
      ]
     }
    ],
