--- a/Notebooks/database.ipynb
+++ b/Notebooks/database.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -35,13 +35,13 @@
     "from pymongo import MongoClient\n",
     "\n",
     "# Replace with your MongoDB connection string\n",
-    "database_url = myclient.os.getenv('db_url_for_creating')\n",
+    "database_url = os.getenv('db_url_for_creating')\n",
     "\n",
     "# Connect to the MongoDB server\n",
     "client = MongoClient(database_url)\n",
     "\n",
     "# Access the specific database\n",
-    "db_name = \"ms3\"\n",
+    "db_name = \"real_news\"\n",
     "db = client[db_name]\n",
     "\n",
     "collection_name = \"sampleCollection\"\n",
@@ -72,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Database 'ms3' created and collections copied. Collections 'idstorages, selectedusers' retained with data.\n"
+      "Database 'real_news' created and collections copied. Collections 'idstorages, selectedusers' retained with data.\n"
      ]
     }
    ],
@@ -112,15 +112,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-10-20 00:00:00\n",
-      "2024-11-12 00:00:00\n",
+      "2024-10-24 00:00:00\n",
+      "2024-11-16 00:00:00\n",
+      "Deleted 0 documents from selectedusers\n",
+      "Deleted 0 documents from viewposts\n",
+      "Deleted 37 documents from posts\n",
+      "Deleted 0 documents from postdislikes\n",
+      "Deleted 0 documents from postlikes\n",
+      "Deleted 20 documents from users\n",
+      "Deleted 0 documents from commentdislikes\n",
+      "Deleted 0 documents from comments\n",
+      "Deleted 0 documents from reposts\n",
+      "Deleted 0 documents from sampleCollection\n",
+      "Deleted 0 documents from users5\n",
+      "Deleted 0 documents from idstorages\n",
+      "Deleted 0 documents from readposts\n",
+      "Deleted 0 documents from subscriptions\n",
+      "Deleted 0 documents from commentlikes\n",
       "Data deletion complete.\n"
      ]
     }
@@ -136,7 +151,7 @@
     "client = MongoClient(database_url)\n",
     "\n",
     "# Access the specific database\n",
-    "db_name = os.getenv('db_name')\n",
+    "db_name = 'fake_news'\n",
     "db = client[db_name]\n",
     "\n",
     "three_weeks_ago = datetime.now() - timedelta(days=10) #datetime.now() - timedelta(weeks=3)\n",
@@ -167,14 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleted 180 documents.\n"
+      "Deleted 20 documents.\n"
      ]
     }
    ],
@@ -189,11 +204,11 @@
     "# Connect to the MongoDB server\n",
     "client = MongoClient(database_url)\n",
     "\n",
-    "db = client[\"ms1\"]\n",
+    "db = client[\"real_news\"]\n",
     "users_collection = db[\"users\"]     # Replace with your collection name\n",
     "\n",
     "# Define the cutoff date\n",
-    "cutoff_date = datetime(2024, 11, 6, 23, 59, 59)\n",
+    "cutoff_date = datetime(2024, 11, 13, 11, 30, 59)\n",
     "\n",
     "# Delete users created after the cutoff date\n",
     "result = users_collection.delete_many({\"createdAt\": {\"$gt\": cutoff_date}})\n",
@@ -231,6 +246,54 @@
     "    target_db[\"posts\"].insert_many(posts)\n",
     "    print(f\"Copied {len(posts)} posts to ms4.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleted 3 documents.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pymongo import MongoClient\n",
+    "import os\n",
+    "\n",
+    "# Replace with your MongoDB connection string\n",
+    "database_url = os.getenv('db_url_for_creating')\n",
+    "\n",
+    "# Connect to the MongoDB server\n",
+    "client = MongoClient(database_url)\n",
+    "\n",
+    "db = client[\"fake_news\"]\n",
+    "posts_collection = db[\"posts\"]  # Replace with your collection name\n",
+    "\n",
+    "# Find the first 150 documents based on the creation order\n",
+    "first_150_docs = posts_collection.find().sort(\"createdAt\", 1).limit(150)\n",
+    "\n",
+    "# Store the IDs of these documents\n",
+    "first_150_ids = [doc[\"_id\"] for doc in first_150_docs]\n",
+    "\n",
+    "# Delete all documents that are not in the first 150\n",
+    "result = posts_collection.delete_many({\n",
+    "    \"_id\": {\"$nin\": first_150_ids}\n",
+    "})\n",
+    "\n",
+    "print(f\"Deleted {result.deleted_count} documents.\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
