--- a/Notebooks/database.ipynb
+++ b/Notebooks/database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -112,30 +112,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-10-24 00:00:00\n",
-      "2024-11-16 00:00:00\n",
-      "Deleted 0 documents from selectedusers\n",
-      "Deleted 0 documents from viewposts\n",
-      "Deleted 37 documents from posts\n",
-      "Deleted 0 documents from postdislikes\n",
-      "Deleted 0 documents from postlikes\n",
-      "Deleted 20 documents from users\n",
-      "Deleted 0 documents from commentdislikes\n",
-      "Deleted 0 documents from comments\n",
-      "Deleted 0 documents from reposts\n",
-      "Deleted 0 documents from sampleCollection\n",
-      "Deleted 0 documents from users5\n",
+      "2024-10-25 00:00:00\n",
+      "2024-11-17 00:00:00\n",
       "Deleted 0 documents from idstorages\n",
-      "Deleted 0 documents from readposts\n",
+      "Deleted 0 documents from postlikes\n",
+      "Deleted 0 documents from commentdislikes\n",
+      "Deleted 37 documents from posts\n",
       "Deleted 0 documents from subscriptions\n",
+      "Deleted 20 documents from users\n",
+      "Deleted 0 documents from comments\n",
+      "Deleted 0 documents from viewposts\n",
+      "Deleted 0 documents from users5\n",
+      "Deleted 0 documents from sampleCollection\n",
+      "Deleted 0 documents from reposts\n",
+      "Deleted 0 documents from selectedusers\n",
       "Deleted 0 documents from commentlikes\n",
+      "Deleted 0 documents from postdislikes\n",
+      "Deleted 0 documents from readposts\n",
       "Data deletion complete.\n"
      ]
     }
@@ -151,7 +151,7 @@
     "client = MongoClient(database_url)\n",
     "\n",
     "# Access the specific database\n",
-    "db_name = 'fake_news'\n",
+    "db_name = 'real_news'\n",
     "db = client[db_name]\n",
     "\n",
     "three_weeks_ago = datetime.now() - timedelta(days=10) #datetime.now() - timedelta(weeks=3)\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -204,11 +204,11 @@
     "# Connect to the MongoDB server\n",
     "client = MongoClient(database_url)\n",
     "\n",
-    "db = client[\"real_news\"]\n",
+    "db = client[\"fake_news\"]\n",
     "users_collection = db[\"users\"]     # Replace with your collection name\n",
     "\n",
     "# Define the cutoff date\n",
-    "cutoff_date = datetime(2024, 11, 13, 11, 30, 59)\n",
+    "cutoff_date = datetime(2024, 11, 14, 9, 9, 59)\n",
     "\n",
     "# Delete users created after the cutoff date\n",
     "result = users_collection.delete_many({\"createdAt\": {\"$gt\": cutoff_date}})\n",
