Initial commit from remote server

--- a/Notebooks/database.ipynb
+++ b/Notebooks/database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
     "client = MongoClient(database_url)\n",
     "\n",
     "# Access the specific database\n",
-    "db_name = \"real_news\"\n",
+    "db_name = \"test_llm_8\"\n",
     "db = client[db_name]\n",
     "\n",
     "collection_name = \"sampleCollection\"\n",
@@ -65,14 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Database 'real_news' created and collections copied. Collections 'idstorages, selectedusers' retained with data.\n"
+      "Database 'test_llm_8' created and collections copied. Collections 'idstorages, selectedusers' retained with data.\n"
      ]
     }
    ],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -122,20 +122,20 @@
       "2024-10-25 00:00:00\n",
       "2024-11-17 00:00:00\n",
       "Deleted 0 documents from idstorages\n",
-      "Deleted 0 documents from postlikes\n",
-      "Deleted 0 documents from commentdislikes\n",
-      "Deleted 37 documents from posts\n",
-      "Deleted 0 documents from subscriptions\n",
-      "Deleted 20 documents from users\n",
-      "Deleted 0 documents from comments\n",
-      "Deleted 0 documents from viewposts\n",
-      "Deleted 0 documents from users5\n",
-      "Deleted 0 documents from sampleCollection\n",
-      "Deleted 0 documents from reposts\n",
-      "Deleted 0 documents from selectedusers\n",
       "Deleted 0 documents from commentlikes\n",
+      "Deleted 0 documents from commentdislikes\n",
+      "Deleted 0 documents from sampleCollection\n",
+      "Deleted 0 documents from selectedusers\n",
+      "Deleted 0 documents from reposts\n",
+      "Deleted 0 documents from postlikes\n",
       "Deleted 0 documents from postdislikes\n",
+      "Deleted 0 documents from comments\n",
+      "Deleted 0 documents from users5\n",
+      "Deleted 0 documents from posts\n",
+      "Deleted 30 documents from users\n",
       "Deleted 0 documents from readposts\n",
+      "Deleted 0 documents from subscriptions\n",
+      "Deleted 0 documents from viewposts\n",
       "Data deletion complete.\n"
      ]
     }
@@ -151,7 +151,7 @@
     "client = MongoClient(database_url)\n",
     "\n",
     "# Access the specific database\n",
-    "db_name = 'real_news'\n",
+    "db_name = 'test_llm_4'\n",
     "db = client[db_name]\n",
     "\n",
     "three_weeks_ago = datetime.now() - timedelta(days=10) #datetime.now() - timedelta(weeks=3)\n",
