Initial commit from remote server

--- a/Notebooks/Comments per user.ipynb
+++ b/Notebooks/Comments per user.ipynb
@@ -37,8 +37,8 @@
     "from bson import ObjectId  # Import ObjectId to handle ObjectIds\n",
     "\n",
     "# Connect to the MongoDB database\n",
-    "client = MongoClient(myclient.os.getenv('db_url_for_creating'))\n",
-    "db = client[myclient.os.getenv('db_name')]  # Replace with your database name\n",
+    "client = MongoClient(os.getenv('db_url_for_creating'))\n",
+    "db = client[os.getenv('db_name')] \n",
     "\n",
     "try:\n",
     "    # Test the connection\n",
