--- a/Notebooks/database.ipynb
+++ b/Notebooks/database.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -14,12 +25,14 @@
     "import csv\n",
     "import datetime\n",
     "from datetime import datetime\n",
-    "import re"
+    "import re\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +54,7 @@
     "client = MongoClient(database_url)\n",
     "\n",
     "# Access the specific database\n",
-    "db_name = \"test_llm_8\"\n",
+    "db_name = \"test_llm_4\"\n",
     "db = client[db_name]\n",
     "\n",
     "collection_name = \"sampleCollection\"\n",
@@ -65,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Database 'test_llm_8' created and collections copied. Collections 'idstorages, selectedusers' retained with data.\n"
+      "Database 'test_llm_4' created and collections copied. Collections 'idstorages, selectedusers' retained with data.\n"
      ]
     }
    ],
@@ -112,15 +125,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-10-25 00:00:00\n",
-      "2024-11-17 00:00:00\n",
+      "2024-10-26 00:00:00\n",
+      "2024-11-18 00:00:00\n",
       "Deleted 0 documents from idstorages\n",
       "Deleted 0 documents from commentlikes\n",
       "Deleted 0 documents from commentdislikes\n",
@@ -132,7 +145,7 @@
       "Deleted 0 documents from comments\n",
       "Deleted 0 documents from users5\n",
       "Deleted 0 documents from posts\n",
-      "Deleted 30 documents from users\n",
+      "Deleted 2 documents from users\n",
       "Deleted 0 documents from readposts\n",
       "Deleted 0 documents from subscriptions\n",
       "Deleted 0 documents from viewposts\n",
@@ -182,14 +195,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleted 20 documents.\n"
+      "Deleted 190 documents.\n"
      ]
     }
    ],
@@ -204,14 +217,14 @@
     "# Connect to the MongoDB server\n",
     "client = MongoClient(database_url)\n",
     "\n",
-    "db = client[\"fake_news\"]\n",
-    "users_collection = db[\"users\"]     # Replace with your collection name\n",
+    "db = client[\"real_news\"]\n",
+    "posts_collection = db[\"posts\"]     # Replace with your collection name\n",
     "\n",
     "# Define the cutoff date\n",
     "cutoff_date = datetime(2024, 11, 14, 9, 9, 59)\n",
     "\n",
     "# Delete users created after the cutoff date\n",
-    "result = users_collection.delete_many({\"createdAt\": {\"$gt\": cutoff_date}})\n",
+    "result = posts_collection.delete_many({\"createdAt\": {\"$gt\": cutoff_date}})\n",
     "print(f\"Deleted {result.deleted_count} documents.\")"
    ]
   },
