Initial commit from remote server

--- a/Notebooks/posts per user.ipynb
+++ b/Notebooks/posts per user.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -43,8 +43,7 @@
     "from dotenv import load_dotenv\n",
     "load_dotenv()\n",
     "# Connect to the MongoDB database\n",
-    "db_url = os.getenv('DB_URL')\n",
-    "print(db_url)\n",
+    "db_url = os.getenv('DB_URL')|\n",
     "client = MongoClient(db_url)\n",
     "db_n=os.getenv('db_name')\n",
     "print(db_n)\n",
