Initial commit from remote server

--- a/Notebooks/database.ipynb
+++ b/Notebooks/database.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
     "client = MongoClient(database_url)\n",
     "\n",
     "# Access the specific database\n",
-    "db_name = \"test_llm_4\"\n",
+    "db_name = \"test_local_2\"\n",
     "db = client[db_name]\n",
     "\n",
     "collection_name = \"sampleCollection\"\n",
@@ -78,14 +78,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Database 'test_llm_4' created and collections copied. Collections 'idstorages, selectedusers' retained with data.\n"
+     "ename": "OperationFailure",
+     "evalue": "cannot create a new collection -- already using 500 collections of 500, full error: {'ok': 0, 'errmsg': 'cannot create a new collection -- already using 500 collections of 500', 'code': 8000, 'codeName': 'AtlasError'}",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationFailure\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-f885279f0822>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     27\u001b[0m         \u001b[0;31m# Create an empty collection in the target database\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0mtarget_collection\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Ensure the collection is empty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m         \u001b[0mtarget_db\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_collection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcollection_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Database '{target_db_name}' created and collections copied. Collections '{', '.join(keep_non_empty)}' retained with data.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Twon-Simulations-1/myenv/lib64/python3.6/site-packages/pymongo/database.py\u001b[0m in \u001b[0;36mcreate_collection\u001b[0;34m(self, name, codec_options, read_preference, write_concern, read_concern, session, **kwargs)\u001b[0m\n\u001b[1;32m    387\u001b[0m                 \u001b[0mread_concern\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    388\u001b[0m                 \u001b[0msession\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 389\u001b[0;31m                 \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    390\u001b[0m             )\n\u001b[1;32m    391\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Twon-Simulations-1/myenv/lib64/python3.6/site-packages/pymongo/collection.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, database, name, create, codec_options, read_preference, write_concern, read_concern, session, **kwargs)\u001b[0m\n\u001b[1;32m    216\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__full_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"%s.%s\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__database\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    217\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcreate\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mkwargs\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mcollation\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 218\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__create\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcollation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msession\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    219\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    220\u001b[0m         self.__write_response_codec_options = self.codec_options._replace(\n",
+      "\u001b[0;32m~/Twon-Simulations-1/myenv/lib64/python3.6/site-packages/pymongo/collection.py\u001b[0m in \u001b[0;36m__create\u001b[0;34m(self, options, collation, session)\u001b[0m\n\u001b[1;32m    301\u001b[0m                 \u001b[0mwrite_concern\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_write_concern_for\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    302\u001b[0m                 \u001b[0mcollation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcollation\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 303\u001b[0;31m                 \u001b[0msession\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    304\u001b[0m             )\n\u001b[1;32m    305\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Twon-Simulations-1/myenv/lib64/python3.6/site-packages/pymongo/collection.py\u001b[0m in \u001b[0;36m_command\u001b[0;34m(self, sock_info, command, read_preference, codec_options, check, allowable_errors, read_concern, write_concern, collation, session, retryable_write, user_fields)\u001b[0m\n\u001b[1;32m    284\u001b[0m                 \u001b[0mclient\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__database\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclient\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    285\u001b[0m                 \u001b[0mretryable_write\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mretryable_write\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 286\u001b[0;31m                 \u001b[0muser_fields\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0muser_fields\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    287\u001b[0m             )\n\u001b[1;32m    288\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Twon-Simulations-1/myenv/lib64/python3.6/site-packages/pymongo/pool.py\u001b[0m in \u001b[0;36mcommand\u001b[0;34m(self, dbname, spec, read_preference, codec_options, check, allowable_errors, read_concern, write_concern, parse_write_concern_error, collation, session, client, retryable_write, publish_events, user_fields, exhaust_allowed)\u001b[0m\n\u001b[1;32m    762\u001b[0m                 \u001b[0munacknowledged\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0munacknowledged\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    763\u001b[0m                 \u001b[0muser_fields\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0muser_fields\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 764\u001b[0;31m                 \u001b[0mexhaust_allowed\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mexhaust_allowed\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    765\u001b[0m             )\n\u001b[1;32m    766\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mOperationFailure\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNotPrimaryError\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Twon-Simulations-1/myenv/lib64/python3.6/site-packages/pymongo/network.py\u001b[0m in \u001b[0;36mcommand\u001b[0;34m(sock_info, dbname, spec, is_mongos, read_preference, codec_options, session, client, check, allowable_errors, address, listeners, max_bson_size, read_concern, parse_write_concern_error, collation, compression_ctx, use_op_msg, unacknowledged, user_fields, exhaust_allowed)\u001b[0m\n\u001b[1;32m    162\u001b[0m                     \u001b[0msock_info\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax_wire_version\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    163\u001b[0m                     \u001b[0mallowable_errors\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 164\u001b[0;31m                     \u001b[0mparse_write_concern_error\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparse_write_concern_error\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    165\u001b[0m                 )\n\u001b[1;32m    166\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mexc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Twon-Simulations-1/myenv/lib64/python3.6/site-packages/pymongo/helpers.py\u001b[0m in \u001b[0;36m_check_command_response\u001b[0;34m(response, max_wire_version, allowable_errors, parse_write_concern_error)\u001b[0m\n\u001b[1;32m    178\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mCursorNotFound\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merrmsg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_wire_version\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    179\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 180\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mOperationFailure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merrmsg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_wire_version\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    181\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    182\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mOperationFailure\u001b[0m: cannot create a new collection -- already using 500 collections of 500, full error: {'ok': 0, 'errmsg': 'cannot create a new collection -- already using 500 collections of 500', 'code': 8000, 'codeName': 'AtlasError'}"
      ]
     }
    ],
@@ -125,30 +136,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-10-26 00:00:00\n",
-      "2024-11-18 00:00:00\n",
-      "Deleted 0 documents from idstorages\n",
-      "Deleted 0 documents from commentlikes\n",
+      "2024-11-02 00:00:00\n",
+      "2024-11-25 00:00:00\n",
+      "Deleted 0 documents from comments\n",
       "Deleted 0 documents from commentdislikes\n",
+      "Deleted 0 documents from postdislikes\n",
+      "Deleted 15 documents from users\n",
+      "Deleted 0 documents from idstorages\n",
+      "Deleted 0 documents from posts\n",
+      "Deleted 0 documents from subscriptions\n",
       "Deleted 0 documents from sampleCollection\n",
-      "Deleted 0 documents from selectedusers\n",
+      "Deleted 0 documents from commentlikes\n",
+      "Deleted 0 documents from viewposts\n",
+      "Deleted 0 documents from readposts\n",
       "Deleted 0 documents from reposts\n",
       "Deleted 0 documents from postlikes\n",
-      "Deleted 0 documents from postdislikes\n",
-      "Deleted 0 documents from comments\n",
+      "Deleted 0 documents from selectedusers\n",
       "Deleted 0 documents from users5\n",
-      "Deleted 0 documents from posts\n",
-      "Deleted 2 documents from users\n",
-      "Deleted 0 documents from readposts\n",
-      "Deleted 0 documents from subscriptions\n",
-      "Deleted 0 documents from viewposts\n",
       "Data deletion complete.\n"
      ]
     }
@@ -164,7 +175,7 @@
     "client = MongoClient(database_url)\n",
     "\n",
     "# Access the specific database\n",
-    "db_name = 'test_llm_4'\n",
+    "db_name = 'test_llm_1'\n",
     "db = client[db_name]\n",
     "\n",
     "three_weeks_ago = datetime.now() - timedelta(days=10) #datetime.now() - timedelta(weeks=3)\n",
@@ -195,14 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleted 190 documents.\n"
+      "Deleted 15 documents.\n"
      ]
     }
    ],
@@ -217,14 +228,14 @@
     "# Connect to the MongoDB server\n",
     "client = MongoClient(database_url)\n",
     "\n",
-    "db = client[\"real_news\"]\n",
-    "posts_collection = db[\"posts\"]     # Replace with your collection name\n",
+    "db = client[\"test_llm_1\"]\n",
+    "users_collection = db[\"users\"]     # Replace with your collection name\n",
     "\n",
     "# Define the cutoff date\n",
-    "cutoff_date = datetime(2024, 11, 14, 9, 9, 59)\n",
+    "cutoff_date = datetime(2024, 11, 20, 9, 9, 59)\n",
     "\n",
     "# Delete users created after the cutoff date\n",
-    "result = posts_collection.delete_many({\"createdAt\": {\"$gt\": cutoff_date}})\n",
+    "result = users_collection.delete_many({\"createdAt\": {\"$gt\": cutoff_date}})\n",
     "print(f\"Deleted {result.deleted_count} documents.\")"
    ]
   },
@@ -303,10 +314,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Earliest: 2024-11-19 18:40:48.163000 in collection postlikes\n",
+      "Latest: 2024-11-20 08:35:50.340000 in collection posts\n",
+      "Time difference: 13:55:02.177000\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pymongo import MongoClient\n",
+    "from datetime import datetime\n",
+    "\n",
+    "# Connect to MongoDB\n",
+    "database_url = os.getenv('db_url_for_creating')\n",
+    "client = MongoClient(database_url)  # Adjust the URI if needed\n",
+    "db = client[\"test_llm_1\"]  # Replace with your database name\n",
+    "\n",
+    "collections = [\"commentlikes\", \"comments\", \"postlikes\", \"posts\"]\n",
+    "\n",
+    "# Initialize variables to track earliest and latest dates\n",
+    "earliest = {\"collection\": None, \"createdAt\": None}\n",
+    "latest = {\"collection\": None, \"createdAt\": None}\n",
+    "\n",
+    "for collection_name in collections:\n",
+    "    collection = db[collection_name]\n",
+    "    \n",
+    "    # Find the document with the earliest and latest `createdAt` values\n",
+    "    first_doc = collection.find_one(sort=[(\"createdAt\", 1)])\n",
+    "    last_doc = collection.find_one(sort=[(\"createdAt\", -1)])\n",
+    "    \n",
+    "    # Update the earliest\n",
+    "    if first_doc and (earliest[\"createdAt\"] is None or first_doc[\"createdAt\"] < earliest[\"createdAt\"]):\n",
+    "        earliest = {\"collection\": collection_name, \"createdAt\": first_doc[\"createdAt\"]}\n",
+    "    \n",
+    "    # Update the latest\n",
+    "    if last_doc and (latest[\"createdAt\"] is None or last_doc[\"createdAt\"] > latest[\"createdAt\"]):\n",
+    "        latest = {\"collection\": collection_name, \"createdAt\": last_doc[\"createdAt\"]}\n",
+    "\n",
+    "# Calculate the time difference\n",
+    "if earliest[\"createdAt\"] and latest[\"createdAt\"]:\n",
+    "    time_diff = latest[\"createdAt\"] - earliest[\"createdAt\"]\n",
+    "    print(f\"Earliest: {earliest['createdAt']} in collection {earliest['collection']}\")\n",
+    "    print(f\"Latest: {latest['createdAt']} in collection {latest['collection']}\")\n",
+    "    print(f\"Time difference: {time_diff}\")\n",
+    "else:\n",
+    "    print(\"Could not determine earliest or latest createdAt.\")\n",
+    "\n",
+    "# Close the connection\n",
+    "client.close()\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -318,7 +380,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
